--- a/Phase 1/src/Makefile
+++ b/Phase 1/src/Makefile
@@ -1,6 +1,7 @@
 
 all:
-	gcc myRISCVSim.c main.c -I ../include -o ../bin/myRISCVSim
+	gcc myRISCVSim.c main.c -I ../include -o ../../GUI/server/myRISCVSim 
 
 clean:
 	rm -f *.o *~ *.bak ../bin/myRISCVSim
+	# gcc myRISCVSim.c main.c -I ../include -o ../bin/myRISCVSim
