--- a/Phase 1/src/Makefile
+++ b/Phase 1/src/Makefile
@@ -1,7 +1,8 @@
 
 all:
 	gcc myRISCVSim.c main.c -I ../include -o ../../GUI/server/myRISCVSim 
+	gcc myRISCVSim.c main.c -I ../include -o ../bin/myRISCVSim
 
 clean:
 	rm -f *.o *~ *.bak ../bin/myRISCVSim
-	# gcc myRISCVSim.c main.c -I ../include -o ../bin/myRISCVSim
+	
