new changes to Server and GUI of Phase 1

--- a/Phase 1/src/Makefile
+++ b/Phase 1/src/Makefile
@@ -1,6 +1,6 @@
 
 all:
-	gcc myRISCVSim.c main.c -I ../include -o ../../GUI/server/myRISCVSim 
+	gcc myRISCVSim.c main.c -I ../include -o ../../GUI/Server/myRISCVSim 
 	gcc myRISCVSim.c main.c -I ../include -o ../bin/myRISCVSim
 
 clean:
